--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Japflix</title>
 
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="./css/spinner.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body class="bg-dark">
@@ -17,32 +18,116 @@
     <div class="text-center container">
       <div class="row py-lg-3">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light"><img src="img/japflix.png" alt=""></h1>
-          <input type="search" class="form-control" name="buscar" id="inputBuscar" placeholder="Ej.: The Lion King">
-          <button class="btn btn-primary m-2" id="btnBuscar">Buscar</button>
+          <h1 class="fw-light"><img src="img/japflix.png" alt="" /></h1>
+          <form id="form_search">
+            <input required type="search" class="form-control" name="buscar" id="inputBuscar"
+              placeholder="Ej.: The Lion King" />
+            <button type="submit" class="btn btn-primary m-2" id="btnBuscar">
+              Buscar
+            </button>
+          </form>
         </div>
       </div>
     </div>
 
     <div class="album">
       <ul class="list-group container" id="lista">
+        <li role="button" class="list-group-item bg-dark text-white p-3 d-none" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+          <div class="d-flex justify-content-between flex-column flex-md-row">
+            <p class="mb-0">
+              <strong class="title">The Lord of the Rings The Lord of the Rings The Lord of the
+                Rings The Lord of the Rings</strong>
+            </p>
+            <div class="stars">
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+          <p class="mb-0 fst-italic text-muted tagline">
+            One ring to rule them all
+          </p>
+        </li>
       </ul>
     </div>
+    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+      <div class="offcanvas-header">
+        <h3 class="offcanvas-title" id="offcanvasTopLabel">Offcanvas top</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body overflow-visible">
+        <div>
+          <p class="offcanvas-description"></p>
+          <hr />
+          <div class="d-flex justify-content-between overflow-visible align-items-center">
+            <div class="offcanvas-genres d-flex align-items-center">
+              <span class="text-muted"></span>
+            </div>
+            <div>
+              <div class="btn-group">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                  data-bs-display="static" auto-close="outside" aria-expanded="false">
+                  More
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li class="dropdown-item">
+                    <p class="mb-0">
+                      Year: <span class="offcanvas-year"></span>
+                    </p>
+                  </li>
+                  <li class="dropdown-item">
+                    <p class="mb-0">
+                      Runtime: <span class="offcanvas-runtime"></span>
+                    </p>
+                  </li>
+                  <li class="dropdown-item">
+                    <p class="mb-0">
+                      Budget: <span class="offcanvas-budget"></span>
+                    </p>
+                  </li>
+                  <li class="dropdown-item">
+                    <p class="mb-0">
+                      Revenue: <span class="offcanvas-revenue"></span>
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
+
+  <div id="spinner-wrapper">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
 
   <footer class="text-muted py-3">
     <div class="container">
       <p class="float-end mb-1">
         <a href="#">Volver arriba</a>
       </p>
-      <p class="mb-1">Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">
+      <p class="mb-1">
+        Este sitio forma parte de
+        <a href="https://jovenesaprogramar.edu.uy/" target="_blank">
           Jovenes a Programar</a>.
+      </p>
+
       <p class="mb-1">Generado con fines estrictamente educativos.</p>
     </div>
   </footer>
-
-  <script src="js/bootstrap.bundle.min.js"></script>
-
+  <script src="./js/bootstrap.bundle.min.js"></script>
+  <script src="./js/init.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
